--- a/package.json
+++ b/package.json
@@ -26,12 +26,19 @@
     ]
   },
   "dependencies": {
-    "next": "latest",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "axios": "^0.21.1",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
+    "next": "^10.0.9",
+    "next-firebase-auth": "^0.13.0-alpha.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-firebaseui": "^4.1.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.5",
+    "@types/axios": "^0.14.0",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
